Refactor(commands): Java 15.